samples/_failures_safe/1761718783_b01af5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a33da67a.c: In function ‘main’:
./samples/SAFE/__tmp_a33da67a.c:169:9: error: expected expression at end of input
  169 |         analyze_logs(&
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_a33da67a.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a33da67a.c:169:9: error: expected declaration or statement at end of input
